--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,26 @@
 </head>
 <body>
 
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+ 
+ <div class="container">
+ <a href="#" class="navbar-brand">Hagamosvaca.com</a>
+      <ul class="nav navbar-nav">
+      <li class="active"><%= link_to "Propuestas", statuses_path %></li>
+      
+
+      </ul>
+ 	
+
+ </div>
+ 	
+ </div>
+	
+</div>
+
+<div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
