--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,27 +1,27 @@
-<h1>Listing statuses</h1>
+<div class="page-header">
+  <h1>Todas las propuestas</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Contenido</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= link_to "Crear nueva propuesta", new_status_path, class: "btn btn-success" %>
 
-  <tbody>
-    <% @statuses.each do |status| %>
-      <tr>
-        <td><%= status.nombre %></td>
-        <td><%= status.contenido %></td>
-        <td><%= link_to 'Show', status %></td>
-        <td><%= link_to 'Edit', edit_status_path(status) %></td>
-        <td><%= link_to 'Destroy', status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @statuses.each do |status|%>
 
-<br>
 
-<%= link_to 'New Status', new_status_path %>
+<div class="status">
+  <strong><%= status.nombre %></strong>
+  <p><%= status.contenido %></p>
+
+  <div>
+    <%= link_to time_ago_in_words(status.created_at), status %>
+    <span class="admin">
+    | <%= link_to "Editar", edit_status_path(status)%> |
+    <%= link_to "Borrar", status, method: :delete, data: {confirm: "¿Estas seguro que deseas borrar esta propuesta?"} %>
+
+    </span>
+  </div>
+</div>
+
+
+
+
+  <% end  %>
