crear session de inicio y registros de usuarios y un poco de diseño

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,22 @@
       
 
       </ul>
- 	
 
+      <ul class="nav navbar-nav pull-right">
+       <% if user_signed_in? %>
+       <li><%= link_to current_user.nombre_completo, edit_user_registration_path %></li>
+       <li><%= link_to "cerrar sesion", destroy_user_session_path, method: :delete %></li>
+
+       <% else %>
+
+      <li><%= link_to "Registrarse", new_user_registration_path %></li>
+      <li><%= link_to "iniciar session", new_user_session_path %></li>
+
+
+       <% end %>
+
+      </ul>
+ 	  
  </div>
  	
  </div>
@@ -26,6 +40,8 @@
 </div>
 
 <div class="container">
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 <%= yield %>
 </div>
 
