--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -8,7 +8,8 @@
 
 
 <div class="status">
-  <strong><%= status.nombre %></strong>
+<strong><%= status.user :nombre_completo %></strong>
+  
   <p><%= status.contenido %></p>
 
   <div>
