--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
  <div class="container">
  <a href="#" class="navbar-brand">Hagamosvaca.com</a>
       <ul class="nav navbar-nav">
-      <li class="active"><%= link_to "Propuestas", statuses_path %></li>
+      <li class="active"><%= link_to "Status", timeline_path %></li>
       
 
       </ul>
@@ -25,8 +25,8 @@
 
        <% else %>
 
-      <li><%= link_to "Registrarse", new_user_registration_path %></li>
-      <li><%= link_to "iniciar session", new_user_session_path %></li>
+      <li><%= link_to "registrar", registrar_path %></li>
+      <li><%= link_to "iniciar sesion", comenzar_path %></li>
 
 
        <% end %>
@@ -40,8 +40,27 @@
 </div>
 
 <div class="container">
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+
+   <% flash.each do | type, message| %>
+       <% end %>
+    <% if flash[:notice] %>
+
+    <div class="alert alert-success alert-dismissable">
+       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">x</span></button>
+       <%= flash[:notice] %>
+    </div>
+
+<% end %>
+     
+     <% if flash[:alert] %>
+
+    <div class="alert alert-danger alert-dismissable">
+       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">x</span></button>
+       <%= flash[:alert] %>
+    </div>
+      
+    <% end %>
+     
 <%= yield %>
 </div>
 
